[project]
name = "biomodels-mcp"
version = "0.0.1"
description = "MCP server for different useful biological models"
readme = "README.md"
authors = [
    { name = "antonkulaga", email = "antonkulaga@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "biopython>=1.85",
    "eliot>=1.17.5",
    "pycomfort>=0.0.18",
    "fastapi-mcp>=0.3.4",
    "fastmcp>=2.3.5",
    "typer>=0.15.4",
    "biofm-eval",
]

[project.scripts]
biomodels-mcp = "biomodels_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

#[project.scripts]
#server = "biothings_mcp.server:cli_app"

[tool.hatch.build]
exclude = [
    "*.log",
    "logs/",
    "images/"
]

[tool.uv.sources]
biofm-eval = { git = "https://github.com/antonkulaga/biofm-eval" }
[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
